# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cangjie_macro_library("ohos.arkui.state_macro_manage") {
  sources = [
    "cj_animation.cj",
    "cj_app_storage_define.cj",
    "cj_binder_define.cj",
    "cj_builder_define.cj",
    "cj_builder_param_define.cj",
    "cj_check_component.cj",
    "cj_component_define.cj",
    "cj_constants.cj",
    "cj_consume_define.cj",
    "cj_customdialog_define.cj",
    "cj_entry_define.cj",
    "cj_error_info.cj",
    "cj_generate_var_decl.cj",
    "cj_link_define.cj",
    "cj_local_storage_define.cj",
    "cj_macro_common.cj",
    "cj_macro_concat.cj",
    "cj_observed_define.cj",
    "cj_prop_define.cj",
    "cj_provide_define.cj",
    "cj_publish_define.cj",
    "cj_resource_define.cj",
    "cj_reusable_define.cj",
    "cj_state_define.cj",
    "cj_state_manage_handler.cj",
    "cj_watch_define.cj",
  ]

  cj_external_deps = [ "cangjie_ark_interop:ohos.json.static" ]

  compilation_config = "pipeline=NG"
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
