# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.arkui.state_management") {
  sources = [
    "app_storage.cj",
    "environment.cj",
    "local_storage.cj",
    "local_storage_inter_op.cj",
    "observable.cj",
    "observed_array_list.cj",
    "observed_complex_abstract.cj",
    "observed_object.cj",
    "observed_property.cj",
    "observed_property_abstract.cj",
    "observer.cj",
    "persistent_storage.cj",
    "subscriber_manager.cj",
    "view_stack_processor.cj",
  ]

  cj_deps = [ "../../base:ohos.base" ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.ark_interop",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]

  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
