# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.arkui.ui_context") {
  sources = [
    "cj_ui_context.cj",
    "cj_uicontext_import.cj",
  ]

  cj_deps = [
    "../../base:ohos.base",
    "../component/action_sheet:ohos.arkui.component.action_sheet",
    "../component/alert_dialog:ohos.arkui.component.alert_dialog",
    "../component/common:ohos.arkui.component.common",
    "../component/native_struct:ohos.arkui.component.native_struct",
    "animator:ohos.arkui.ui_context.animator",
    "font:ohos.arkui.ui_context.font",
    "measure:ohos.arkui.ui_context.measure",
    "prompt_action:ohos.arkui.ui_context.prompt_action",
    "router:ohos.arkui.ui_context.router",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
