# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.arkui.ui_context") {
  sources = [
    "cj_ui_context.cj",
    "cj_animator.cj",
    "cj_font.cj",
    "cj_font_api.cj",
    "cj_measure.cj",
    "cj_prompt_action.cj",
    "cj_router.cj"
  ]

  cj_deps = [
    "../../base:ohos.base",
    "../component/action_sheet:ohos.arkui.component.action_sheet",
    "../component/alert_dialog:ohos.arkui.component.alert_dialog",
    "../component/common:ohos.arkui.component.common",
    "../component/native_struct:ohos.arkui.component.native_struct",
    "../component/util:ohos.arkui.component.util"
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "global_cangjie_wrapper:ohos.resource",
    "cangjie_ark_interop:ohos.callback_invoke",
    "multimedia_cangjie_wrapper:ohos.multimedia.image"
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
