# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.arkui.component.canvas") {
  sources = [
    "canvas_constants.cj",
    "canvas_pattern.cj",
    "canvas_rendering_context_2d.cj",
    "cj_canvas.cj",
    "image_bitmap.cj",
    "image_data.cj",
    "matrix_2d.cj",
  ]

  cj_deps = [
    "../../../font:ohos.font",
    "../../../base:ohos.base",
    "../common:ohos.arkui.component.common",
    "../native_struct:ohos.arkui.component.native_struct",
    "../path_2d:ohos.arkui.component.path_2d",
    "../util:ohos.arkui.component.util",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "multimedia_cangjie_wrapper:ohos.multimedia.image",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
