# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.arkui.component.common") {
  sources = [
    "ace_log.cj",
    "cj_class_common.cj",
    "cj_common_native.cj",
    "cj_component_base.cj",
    "cj_component_id.cj",
    "cj_entry.cj",
    "cj_enum.cj",
    "cj_interactable_view.cj",
    "cj_interactable_view_ffi.cj",
    "cj_lambda_invoker_impl.cj",
    "cj_pixel_unit_convert.cj",
    "cj_shape_base.cj",
    "cj_transitioneffect.cj",
    "cj_view_base.cj",
    "cj_view_typedef.cj",
    "container_base.cj",
  ]

  cj_deps = [
    "../../../base:ohos.base",
    "../native_struct:ohos.arkui.component.native_struct",
    "../util:ohos.arkui.component.util",
    "../../state_management:ohos.arkui.state_management",
    "../../../ui_resource:ohos.ui_resource",
  ]

  cj_external_deps = [
    "cangjie_api:ohos.labels",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.ark_interop",
    "hiviewdfx_cangjie_api:ohos.hi_tracemeter",
    "hiviewdfx_cangjie_api:ohos.hilog",
    "multimedia_cangjie_api:ohos.image",
    "global_cangjie_api:ohos.resource_manager",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_api"
  lib_name = "arkui.component.common"
}
