# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.arkui.component.common") {
  sources = [
    "ace_log.cj",
    "cj_class_common.cj",
    "cj_common_native.cj",
    "cj_component_base.cj",
    "cj_component_id.cj",
    "cj_enum.cj",
    "cj_interactable_view.cj",
    "cj_interactable_view_ffi.cj",
    "cj_lambda_invoker_impl.cj",
    "cj_pixel_unit_convert.cj",
    "cj_transitioneffect.cj",
    "cj_view_base.cj",
    "cj_view_typedef.cj",
    "container_base.cj",
    "common_component.cj",
    "common_method.cj",
  ]

  cj_deps = [
    "../../../base:ohos.base",
    "../../shape:ohos.arkui.shape",
    "../../state_management:ohos.arkui.state_management",
    "../native_struct:ohos.arkui.component.native_struct",
    "../util:ohos.arkui.component.util",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.ark_interop",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "global_cangjie_wrapper:ohos.resource",
    "hiviewdfx_cangjie_wrapper:ohos.hi_trace_meter",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "multimedia_cangjie_wrapper:ohos.multimedia.image",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
