# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.arkui.component.custom_component") {
  sources = [
    "cj_entry.cj",
    "cj_recycle_manager.cj",
    "cj_view.cj",
    "cj_view_builder.cj",
    "cj_view_ffi.cj",
    "custom_view.cj",
    "hybrid_component_base.cj",
  ]

  cj_deps = [
    "../../../base:ohos.base",
    "../../state_management:ohos.arkui.state_management",
    "../../ui_context:ohos.arkui.ui_context",
    "../common:ohos.arkui.component.common",
    "../custom_view:ohos.arkui.component.custom_view",
    "../ifcomponent:ohos.arkui.component.ifcomponent",
    "../native_struct:ohos.arkui.component.native_struct",
    "../for_each:ohos.arkui.component.for_each",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.ark_interop",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "cangjie_ark_interop:ohos.business_exception",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
