# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.arkui.component.view") {
  sources = [
    "cj_recycle_manager.cj",
    "cj_view.cj",
    "cj_view_builder.cj",
    "cj_view_ffi.cj",
    "for_each.cj",
    "lazy_for_each.cj",
    "custom_view.cj",
    "hybrid_component_base.cj",
  ]

  cj_deps = [
    "../common:ohos.arkui.component.common",
    "../custom_view:ohos.arkui.component.custom_view",
    "../ifcomponent:ohos.arkui.component.ifcomponent",
    "../lazy_for_each:ohos.arkui.component.lazy_for_each",
    "../native_struct:ohos.arkui.component.native_struct",
    "../../../base:ohos.base",
  ]

  cj_external_deps = [
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
  ]

  subsystem_name = "arkui"
  part_name = "arkui_cangjie_api"
  lib_name = "arkui.component.view"
}
