# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.arkui.component.web") {
  sources = [ "cj_web.cj" ]

  cj_deps = [
    "../../../base:ohos.base",
    "../common:ohos.arkui.component.common",
    "../native_struct:ohos.arkui.component.native_struct",
    "../util:ohos.arkui.component.util",
  ]

  cj_external_deps = [
    "arkweb_cangjie_wrapper:ohos.web.webview",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "global_cangjie_wrapper:ohos.resource",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [
    "access_token:cj_ability_access_ctrl_ffi",
    "ace_engine:cj_frontend_ohos",
  ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
}
